# Artificial-Intelligence-Cup-2022

./: .gitignore  2opt.c  README.md  crazyAnts.c  tsp.c
AI_cup_2022/: AI_cup_2022_studentname.xls
AI_cup_2022/AI_cup_2022_problems/: ch130.tsp
c/: CMakeLists.txt
c++/: CMakeLists.txt
c++/core/: io_tsp.hpp  tsp_solver.hpp  utils.hpp
c++/drivers/: main.cpp
c/core/: acs.h  io_tsp.h  io_tsp.hpp  utils.hpp
c/drivers/: main.c  main.cpp
c/utils/: utils.h
python/: main.py  two-opt.py  utils.py
